--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -19,22 +19,21 @@
                     aria-expanded="false">Фильтры
             </button>
 
-            <form action="{% url 'catalog:index' slug_url %}" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
+            <form action="{% if request.GET.q %} {% url 'catalog:search' %}{% else %}{% url 'catalog:index' slug_url %}{% endif %}" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
                 <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on"
-                           {% if request.GET.on_sale == "on" %} checked {% endif %}>
-<!--                                    <input type="hidden" name="q" value="request.GET.q">-->
+                    <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on" {% if request.GET.on_sale == "on" %} checked {% endif %}>
+                    {% if request.GET.q %}
+                        <input type="hidden" name="q" value="request.GET.q">
+                    {% endif %}
                     <label class="form-check-label" for="flexCheckDefault">Товары по акции</label>
                 </div>
                 <p class="text-white mx-3 mt-3">Сортировать:</p>
                 <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1" value="default"
-                           {% if not request.GET.order_by or request.GET.order_by == "default" %}checked {% endif %}>
+                    <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1" value="default" {% if not request.GET.order_by or request.GET.order_by == "default" %}checked {% endif %}>
                     <label class="form-check-label" for="flexRadioDefault1">По умолчанию</label>
                 </div>
                 <div class="form-check text-white mx-3">
-                    <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault2" value="price"
-                           {% if request.GET.order_by == "price" %} checked {% endif %}>
+                    <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault2" value="price" {% if request.GET.order_by == "price" %} checked {% endif %}>
                     <label class="form-check-label" for="flexRadioDefault2">
                         От дешевых к дорогим
                     </label>
