--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -23,7 +23,7 @@
                 <div class="form-check text-white mx-3">
                     <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on" {% if request.GET.on_sale == "on" %} checked {% endif %}>
                     {% if request.GET.q %}
-                        <input type="hidden" name="q" value="request.GET.q">
+                        <input type="hidden" name="q" value="{{request.GET.q}}">
                     {% endif %}
                     <label class="form-check-label" for="flexCheckDefault">Товары по акции</label>
                 </div>
