Add user profile and messaging system

--- a/templates/base.html
+++ b/templates/base.html
@@ -189,6 +189,8 @@
     </section>
     {% block footer %} {% endblock %}
     <script src="{% static 'js/bootstrap/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/jquery/jquery-3.7.0.min.js' %}"></script>
+    <script src="{% static 'js/jquery-events.js' %}"></script>
 </body>
 
 </html>
