--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -11,6 +11,10 @@
     </footer>
 {% endblock %}
 
+{% block modal_cart %}
+{% include "includes/cart_button.html" %}
+{% endblock %}
+
 {% block content %}
     <div class="row">
         <!-- Форма фильтров -->
@@ -94,7 +98,7 @@
                         {% else %}
                         <p><strong>{{product.price}} $</strong></p>
                         {% endif %}
-                        <a href="#" class="btn add-to-cart">
+                        <a href="{% url 'cart:cart_add' product.slug %}" class="btn add-to-cart">
                             <img class="mx-1" src="{% static 'icons/cart-plus.svg' %}" alt="Catalog Icon"
                                  width="32" height="32">
                         </a>
