--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="{% static 'css/my_footer_css.css' %}">
 {% endblock %}
 
+{% block modal_cart %}
+{% include "includes/cart_button.html" %}
+{% endblock %}
+
 {% block content %}
     <div class="mt-5 pt-5 bg-white custom-shadow rounded">
         <h1 class="m-2"><strong>{{content}}</strong></h1>
