--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="{% static 'css/my_footer_css.css' %}">
 {% endblock %}
 
+{% block modal_cart %}
+{% include "includes/cart_button.html" %}
+{% endblock %}
+
 {% block content %}
     <h2 class="mt-5 pt-5"><strong>{{content}}</strong></h2>
 {% endblock %}
