--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
     {% block footer %} {% endblock %}
     <script src="{% static 'js/bootstrap/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/jquery/jquery-3.7.0.min.js' %}"></script>
-    <script src="{% static 'js/jquery-events.js' %}"></script>
+    <script src="{% static 'js/jquery-ajax.js' %}"></script>
 </body>
 
 </html>
