--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,10 @@
 {% load static %}
 {% load goods_tags %}
+{% load carts_tags %}
+
+{% user_carts request as carts %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,8 +16,8 @@
     {% endblock %}
     <!-- Favicons for different platforms -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon_32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon_16x16.png' %}">
     <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
     <title>{{title}}</title>
 </head>
@@ -43,8 +45,17 @@
                                 <li><a class="dropdown-item  text-white" href="{% url 'main:about' %}">Про нас</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link  text-white" href="{% url 'user:users_cart' %}">Корзина</a>
+                        <li class="nav-item dropdown ">
+                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Каталог
+                            </a>
+                            <ul class="dropdown-menu">
+                                {% tag_categories as categories %}
+                                {% for category in categories %}
+                                <li><a class="dropdown-item text-white" href="{% url 'catalog:index' category.slug %}">{{category.name}}</a></li>
+                                {% endfor %}
+                            </ul>
                         </li>
                         {% if not user.is_authenticated %}
                         <li class="nav-item">
@@ -74,39 +85,23 @@
                         <input class="form-control me-2" type="search" name="q" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success text-white" type="submit">Поиск</button>
                     </form>
+                    <div class="ms-3 d-flex align-items-center">
+                        <a class="nav-link text-white d-flex align-items-center" href="{% url 'user:users_cart' %}">
+                            <img class="mx-1" src="{% static 'icons/basket2-fill.svg' %}" alt="Catalog Icon" width="24" height="24">
+                            <span id="goods-in-cart-count">{{ carts.total_quantity }}</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
     <section>
-        <div class="container">
-            <!-- Каталог и корзина с фиксированным расположением на странице -->
-            <div class="row mt-1 position-fixed z-3">
-                <!-- Каталог -->
-                <div class="dropdown mb-2">
-                    <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Каталог
-                        <img class="mx-1" src="{% static 'icons/grid-fill.svg' %}" alt="Catalog Icon" width="16"
-                            height="16">
-                    </button>
-                    <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
-                        {% tag_categories as categories %}
-                        {% for category in categories %}
-                        <li><a class="dropdown-item text-white" href="{% url 'catalog:index' category.slug %}">{{category.name}}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <!-- Значек корзины, вызывает модальное окно -->
-                {% block modal_cart %} {% endblock %}
-                <!-- Закончилась разметка модального окна -->
-            </div>
-        </div>
         <!-- Контент -->
         <div class="container">
             <div class="row mt-1">
                 <div class="col-lg-2">
-                    <!-- Пустой блок -->
+                    {% block filters %}
+                    {% endblock %}
                 </div>
                 <div class="col-lg-10">
                     <!-- Контент на странице -->
